0.2.4
Done focusing windows when switching desks.
Done position window title left/centre/right.
Added -p/--titleposition to command line options.
Done center window title vertically.
Changed rect to use same structure as lfslib.
Added -F/--font to command line options.

0.2.3
Fixed widget drag eesize.
Fixed window placing.
Fixed transient windows closing.
Fixed exiting.
Moved more events to client class.
Code clean.
Fixed frame position when framing.
Code clean.
Fixed min/max/below/above/alldesks AGAIN!
Sped up window drag move.
Fixed to flicker when changing desktops.
Fixed spurious desktop changes.
Fixed fullscreen window by 3rd party.
Fixed min/max window by 3rd party.
Fixed resizing.
Fixed fallback colours.
Added -f,-b and -t options to set forecolour,backcolour and textcolour of window frame decorations.
Added '-k' option to set message key.
Added lfstklib ( for future stuff).
Minor visual fix.

0.2.2
Fixed drag top left.
Fixed multple 'on top' windows.
Removed some debugging info.
Restore windows to respective desktops/states on startup.
Done sticky window.

0.2.1
Code clean.
Removed bits of legacy code.
Done switching desktops.
Done restack.
Fixed x11 _NET_CLIENT_LIST_STACKING.
Fixed windows above.
Fixed windows below.
Fixed frame windows getting left over.
Code clean.
Done side drag-resize.

0.2.0
Done bottom drag-resize.
Done corner drag-resize.
Done cursor changes in draggers.
Added messageClass.
Done reframing etc etc.

0.0.0-0.2.0
Internal.