@@ -22,7 +22,6 @@
 #define _MESSAGECLASS_
 
 #include <sys/types.h>
-#include <sys/ipc.h>
 #include <sys/msg.h>
 
 #include <signal.h>
