@@ -21,6 +21,26 @@ PKG_CHECK_MODULES(XFT, $XFT_MODULES)
 AC_SUBST(XFT_CFLAGS)
 AC_SUBST(XFT_LIBS)
 
+#XRENDER_MODULES="xrender >= 0.9.10"
+#PKG_CHECK_MODULES(XRENDER, $XRENDER_MODULES)
+#AC_SUBST(XRENDER_CFLAGS)
+#AC_SUBST(XRENDER_LIBS)
+#
+#XCOMPOSITE_MODULES="xcomposite >= 0.4.5"
+#PKG_CHECK_MODULES(XCOMPOSITE, $XCOMPOSITE_MODULES)
+#AC_SUBST(XCOMPOSITE_CFLAGS)
+#AC_SUBST(XCOMPOSITE_LIBS)
+#
+#XSHMFENCE_MODULES="xshmfence >= 1.3"
+#PKG_CHECK_MODULES(XSHMFENCE, $XSHMFENCE_MODULES)
+#AC_SUBST(XSHMFENCE_CFLAGS)
+#AC_SUBST(XSHMFENCE_LIBS)
+#
+#XEXT_MODULES="xext >= 1.3.4"
+#PKG_CHECK_MODULES(XEXT, $XEXT_MODULES)
+#AC_SUBST(XEXT_CFLAGS)
+#AC_SUBST(XEXT_LIBS)
+
 LFSTK_MODULES="lfstk >= 0.5.1"
 PKG_CHECK_MODULES(LFSTK, $LFSTK_MODULES)
 AC_SUBST(LFSTK_LIBS)
